// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeFormArrayOptions should normalize complex form array options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "componentName": null,
  "context": null,
  "controlList": [],
  "controllerName": "post-form",
  "directory": null,
  "feature": null,
  "formName": "post-form",
  "groupLegend": null,
  "handlebars": [Function],
  "importList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/forms",
      "name": "ReactiveFormsModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/form-system",
      "name": "ForFormArrayItemsDirective",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/form-system",
      "name": "FormArrayRemovableDirective",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/form-system",
      "name": "FormArrayItemRemoveButtonDirective",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/form-system",
      "name": "FormArrayItemRestoreButtonDirective",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/form-system",
      "name": "FormArrayAddItemButtonDirective",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "isArray": true,
  "isDisabled": false,
  "isOptional": false,
  "isReadonly": false,
  "isRequired": false,
  "kind": "default",
  "legend": "Tags",
  "memberList": [],
  "name": "tags",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "prefix": null,
  "project": "ui-lib",
  "replace": false,
  "role": "array",
  "scope": null,
  "shared": false,
  "source": null,
  "state": null,
  "template": "default-form-array.hbs",
  "type": {
    "defaultImport": null,
    "isTypeOnly": false,
    "moduleSpecifier": null,
    "name": "unknown",
    "namedImport": null,
    "namespaceImport": null,
  },
  "validatorList": [],
}
`;

exports[`NormalizeFormArrayOptions should normalize minimal form array options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "componentName": null,
  "context": null,
  "controlList": [],
  "controllerName": "test-form",
  "directory": null,
  "feature": null,
  "formName": "test-form",
  "groupLegend": null,
  "handlebars": [Function],
  "importList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/forms",
      "name": "ReactiveFormsModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/form-system",
      "name": "ForFormArrayItemsDirective",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/form-system",
      "name": "FormArrayRemovableDirective",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/form-system",
      "name": "FormArrayItemRemoveButtonDirective",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/form-system",
      "name": "FormArrayItemRestoreButtonDirective",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/form-system",
      "name": "FormArrayAddItemButtonDirective",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "isArray": true,
  "isDisabled": false,
  "isOptional": false,
  "isReadonly": false,
  "isRequired": false,
  "kind": "default",
  "legend": null,
  "memberList": [],
  "name": "testArray",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "prefix": null,
  "project": "ui-lib",
  "replace": false,
  "role": "array",
  "scope": null,
  "shared": false,
  "source": null,
  "state": null,
  "template": "default-form-array.hbs",
  "type": {
    "defaultImport": null,
    "isTypeOnly": false,
    "moduleSpecifier": null,
    "name": "unknown",
    "namedImport": null,
    "namespaceImport": null,
  },
  "validatorList": [],
}
`;
